grammar/test/corpus/statements.txt
================================================================================
variable declarations in a block
================================================================================

void Test()
{
    int A = 1;
    const FVector& Ref = Other;
    FVector V(1.0, 2.0, 3.0);
    auto Element = Map;
    FExampleStruct S = {1, , 3};
    int[] Arr = {1, 2};
    int X, Y = 2, Z;
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (type
      (primitive_type))
    (identifier)
    (parameter_list)
    (block
      (variable_declaration
        (type
          (primitive_type))
        (variable_declarator
          (identifier)
          (number)))
      (variable_declaration
        (type
          (identifier)
          (reference_modifier))
        (variable_declarator
          (identifier)
          (identifier)))
      (variable_declaration
        (type
          (identifier))
        (variable_declarator
          (identifier)
          (argument_list
            (argument
              (number))
            (argument
              (number))
            (argument
              (number)))))
      (variable_declaration
        (type
          (auto_type))
        (variable_declarator
          (identifier)
          (identifier)))
      (variable_declaration
        (type
          (identifier))
        (variable_declarator
          (identifier)
          (initializer_list
            (number)
            (number))))
      (variable_declaration
        (type
          (primitive_type)
          (array_suffix))
        (variable_declarator
          (identifier)
          (initializer_list
            (number)
            (number))))
      (variable_declaration
        (type
          (primitive_type))
        (variable_declarator
          (identifier))
        (variable_declarator
          (identifier)
          (number))
        (variable_declarator
          (identifier))))))

================================================================================
if / else chain
================================================================================

void Test()
{
    if (A)
        Foo();
    else if (B)
    {
        Bar();
    }
    else
        Baz();
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (type
      (primitive_type))
    (identifier)
    (parameter_list)
    (block
      (if_statement
        (identifier)
        (expression_statement
          (call_expression
            (identifier)
            (argument_list)))
        (if_statement
          (identifier)
          (block
            (expression_statement
              (call_expression
                (identifier)
                (argument_list))))
          (expression_statement
            (call_expression
              (identifier)
              (argument_list))))))))

================================================================================
loops
================================================================================

void Test()
{
    while (bRunning)
    {
        Tick();
    }

    do
    {
        Tick();
    }
    while (bRunning);

    for (int I = 0; I < 10; I += 1)
        Use(I);

    for (int I = 0, J = 1; ; )
        Use(I);

    for (auto Element : Map)
    {
        Use(Element.Key);
    }

    for (const FVector& V : Points)
        Use(V);
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (type
      (primitive_type))
    (identifier)
    (parameter_list)
    (block
      (while_statement
        (identifier)
        (block
          (expression_statement
            (call_expression
              (identifier)
              (argument_list)))))
      (do_while_statement
        (block
          (expression_statement
            (call_expression
              (identifier)
              (argument_list))))
        (identifier))
      (for_statement
        (variable_declaration
          (type
            (primitive_type))
          (variable_declarator
            (identifier)
            (number)))
        (binary_expression
          (identifier)
          (number))
        (assignment_expression
          (identifier)
          (number))
        (expression_statement
          (call_expression
            (identifier)
            (argument_list
              (argument
                (identifier))))))
      (for_statement
        (variable_declaration
          (type
            (primitive_type))
          (variable_declarator
            (identifier)
            (number))
          (variable_declarator
            (identifier)
            (number)))
        (expression_statement
          (call_expression
            (identifier)
            (argument_list
              (argument
                (identifier))))))
      (for_each_statement
        (type
          (auto_type))
        (identifier)
        (identifier)
        (block
          (expression_statement
            (call_expression
              (identifier)
              (argument_list
                (argument
                  (member_expression
                    (identifier)
                    (identifier))))))))
      (for_each_statement
        (type
          (identifier)
          (reference_modifier))
        (identifier)
        (identifier)
        (expression_statement
          (call_expression
            (identifier)
            (argument_list
              (argument
                (identifier)))))))))

================================================================================
switch with case, default and fallthrough
================================================================================

void Test(EExampleEnum Input)
{
    switch (Input)
    {
    case EExampleEnum::A:
        Print("A");
        break;
    case 1:
        fallthrough;
    default:
        Print("default");
        continue;
    }
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (type
      (primitive_type))
    (identifier)
    (parameter_list
      (parameter
        (type
          (identifier))
        (identifier)))
    (block
      (switch_statement
        (identifier)
        (switch_body
          (case_clause
            (qualified_identifier
              (identifier)
              (identifier))
            (expression_statement
              (call_expression
                (identifier)
                (argument_list
                  (argument
                    (string_literal)))))
            (break_statement))
          (case_clause
            (number)
            (fallthrough_statement))
          (default_clause
            (expression_statement
              (call_expression
                (identifier)
                (argument_list
                  (argument
                    (string_literal)))))
            (continue_statement)))))))

================================================================================
return and empty statements
================================================================================

int Test()
{
    ;
    {
        Nested();
    }
    return 1;
}

void Void()
{
    return;
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (type
      (primitive_type))
    (identifier)
    (parameter_list)
    (block
      (empty_statement)
      (block
        (expression_statement
          (call_expression
            (identifier)
            (argument_list))))
      (return_statement
        (number))))
  (function_declaration
    (type
      (primitive_type))
    (identifier)
    (parameter_list)
    (block
      (return_statement))))
